_includes/manuals/1.21/2.1_quickstart_installation.md
[The Foreman installer](/manuals/{{page.version}}/index.html#3.2ForemanInstaller) uses Puppet **(4 or later required)** to install Foreman. This guide assumes that you have a newly installed operating system, on which the installer will setup Foreman, a Puppet master, and the [Smart Proxy](/manuals/{{page.version}}/index.html#4.3SmartProxies) by default. It's **not advisable** to follow the steps below on an existing system, since the installer will affect the configuration of several components.

#### Select operating system

<script type="text/javascript">
function update_quickstart_os(select) {
  var os = select.value;
  $(".quickstart_os").hide();
  if (os && os != 'none') {
    $(".quickstart_os_"+os).show();
  } else {
    $(".quickstart_os_none").show();
  }
}
</script>

To provide specific installation instructions, please select your operating system:
<select onChange="update_quickstart_os(this);">
  <option value="none">-- select operating system --</option>
  <option value="el7">CentOS, Scientific Linux or Oracle Linux 7</option>
  <option value="debian9">Debian 9 (Stretch)</option>
  <option value="rhel7">Red Hat Enterprise Linux 7</option>
  <option value="ubuntu1604">Ubuntu 16.04 (Xenial)</option>
  <option value="ubuntu1804">Ubuntu 18.04 (Bionic)</option>
</select>

#### Repositories

<div class="quickstart_os quickstart_os_none">
  <i>No operating system selected.</i>
</div>

<div class="quickstart_os quickstart_os_rhel7">
  <p>First, enable the RHEL Optional repos:</p>

{% highlight bash %}
sudo yum-config-manager --enable rhel-7-server-optional-rpms
{% endhighlight %}

  <p>
    Check the repository is enabled with <code>yum repolist</code> after running the above command, as it can silently fail when subscription does not provide it.
  </p>

  <p>If you're using RH Satellite 5, you should instead sync and enable the channel there.</p>
</div>

<div class="quickstart_os quickstart_os_rhel7 quickstart_os_el7">
  <p>
    Using a recent version of Puppet is recommended, which is available from the Puppet Labs repository.

    To use Puppet 5.x with Puppet Agent and Puppet Server:
  </p>

{% highlight bash %}
sudo yum -y install https://yum.puppetlabs.com/puppet5/puppet5-release-el-7.noarch.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_rhel7">
  <p>Enable the EPEL (Extra Packages for Enterprise Linux) and the Foreman repos:</p>

{% highlight bash %}
sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_el7">
  <p>Enable the EPEL (Extra Packages for Enterprise Linux) and the Foreman repos:</p>

{% highlight bash %}
sudo yum -y install http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian9">
  <p>
    Using Puppet 5.x is recommended, which is available from the Puppet Labs repository.

    To use Puppet 5.x with Puppet Agent and Puppet Server:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.puppetlabs.com/puppet5-release-stretch.deb
sudo dpkg -i /tmp/puppet5-release-stretch.deb
{% endhighlight %}

  <p>Enable the Foreman repo:</p>

{% highlight bash %}
echo "deb http://deb.theforeman.org/ stretch {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
sudo apt-get -y install ca-certificates
wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_ubuntu1604">
  <p>
    Using Puppet 5.x is recommended, which is available from the Puppet Labs repository.

    To use Puppet 5.x with Puppet Agent and Puppet Server:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.puppetlabs.com/puppet5-release-xenial.deb
sudo dpkg -i /tmp/puppet5-release-xenial.deb
{% endhighlight %}

  <p>Enable the Foreman repo:</p>

{% highlight bash %}
echo "deb http://deb.theforeman.org/ xenial {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
sudo apt-get -y install ca-certificates
wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_ubuntu1804">
  <p>
    Using Puppet 5.x is recommended, which is available from the Puppet Labs repository.

    To use Puppet 5.x with Puppet Agent and Puppet Server:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.puppetlabs.com/puppet5-release-bionic.deb
sudo dpkg -i /tmp/puppet5-release-bionic.deb
{% endhighlight %}

  <p>Enable the Foreman repo:</p>

{% highlight bash %}
echo "deb http://deb.theforeman.org/ bionic {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
sudo apt-get -y install ca-certificates
wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
{% endhighlight %}

  <p>Enable the Ubuntu universe repo:</p>

{% highlight bash %}
add-apt-repository universe
{% endhighlight %}
</div>

#### Downloading the installer

<div class="quickstart_os quickstart_os_none">
  <i>No operating system selected.</i>
</div>

<div class="quickstart_os quickstart_os_rhel7 quickstart_os_el7">
{% highlight bash %}
sudo yum -y install foreman-installer
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian9 quickstart_os_ubuntu1804 quickstart_os_ubuntu1604">
{% highlight bash %}
sudo apt-get update && sudo apt-get -y install foreman-installer
{% endhighlight %}
</div>

#### Running the installer

<div class="quickstart_os quickstart_os_debian9 quickstart_os_ubuntu1804 quickstart_os_ubuntu1604 alert alert-info">
  Ensure that <code>ping $(hostname -f)</code> shows the real IP address, not 127.0.1.1.  Change or remove this entry from /etc/hosts if present.
</div>

The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:

<div class="quickstart_os quickstart_os_none quickstart_os_el7 quickstart_os_rhel7 quickstart_os_debian9 quickstart_os_ubuntu1804 quickstart_os_ubuntu1604">
{% highlight bash %}
sudo foreman-installer
{% endhighlight %}
</div>

After it completes, the installer will print some details about where to find Foreman and the Smart Proxy and Puppet master if they were installed along Foreman. Output should be similar to this:

{% highlight bash %}
  * Foreman is running at https://theforeman.example.com
      Initial credentials are admin / 3ekw5xtyXCoXxS29
  * Foreman Proxy is running at https://theforeman.example.com:8443
  * Puppetmaster is running at port 8140
  The full log is at /var/log/foreman-installer/foreman-installer.log
{% endhighlight %}
