_includes/manuals/2.0/2.1_quickstart_installation.md
[The Foreman installer](/manuals/{{page.version}}/index.html#3.2ForemanInstaller) uses Puppet **(4 or later required)** to install Foreman. This guide assumes that you have a newly installed operating system, on which the installer will setup Foreman, a Puppet master, and the [Smart Proxy](/manuals/{{page.version}}/index.html#4.3SmartProxies) by default. It's **not advisable** to follow the steps below on an existing system, since the installer will affect the configuration of several components.

<div class="alert alert-info">

If you want to manage content (for example, RPMs, Kickstart trees, ISO and KVM images, OSTree content, and more) with Foreman please follow the  <a href="https://theforeman.org/plugins/katello/">Katello</a> installation instructions. If you are a new user, ensure that you familiarize yourself with  <a href="https://theforeman.org/plugins/katello/">Katello</a> and decide whether you want to use its features because installing Katello on top of an existing Foreman is unsupported. Note that you cannot install Katello on Debian systems.

</div>


#### Select operating system

<script type="text/javascript">
function update_quickstart_os(select) {
  var os = select.value;
  $(".quickstart_os").hide();
  if (os && os != 'none') {
    $(".quickstart_os_"+os).show();
  } else {
    $(".quickstart_os_none").show();
  }
}
</script>

To provide specific installation instructions, please select your operating system:
<select onChange="update_quickstart_os(this);">
  <option value="none">-- select operating system --</option>
  <option value="el7">CentOS, Scientific Linux or Oracle Linux 7</option>
  <option value="debian10">Debian 10 (Buster)</option>
  <option value="rhel7">Red Hat Enterprise Linux 7</option>
  <option value="ubuntu1804">Ubuntu 18.04 (Bionic)</option>
</select>

#### Repositories

<div class="quickstart_os quickstart_os_none">
  <i>No operating system selected.</i>
</div>

<div class="quickstart_os quickstart_os_rhel7">
  <p>First, enable the RHEL Optional and SCL repositories:</p>

{% highlight bash %}
sudo yum-config-manager --enable rhel-7-server-optional-rpms rhel-server-rhscl-7-rpms
{% endhighlight %}

  <p>
    Check the repositories are enabled with <code>yum repolist</code> after running the above command, as it can silently fail when subscription does not provide those.
  </p>

  <p>If you're using RH Satellite 5, you should instead sync and enable the channel there.</p>
</div>

<div class="quickstart_os quickstart_os_rhel7 quickstart_os_el7">
  <p>
    <b>Note:</b> The RPM packages are not tested on Scientific Linux or Oracle Linux. The Foreman installation on Scientific Linux or Oracle Linux may or may not work.
  </p>

  <p>
    Using a recent version of Puppet is recommended, which is available from the Puppet Labs repository.
    To use Puppet 6.x with Puppet Agent and Puppet Server:
  </p>

{% highlight bash %}
sudo yum -y install https://yum.puppet.com/puppet6-release-el-7.noarch.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_rhel7">
  <p>Enable the EPEL (Extra Packages for Enterprise Linux) and the Foreman repositories:</p>

{% highlight bash %}
sudo yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_el7">
  <p>Enable the EPEL (Extra Packages for Enterprise Linux), Foreman and SCL (Software Collections) repositories:</p>

{% highlight bash %}
sudo yum -y install http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
sudo yum -y install https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm
sudo yum -y install foreman-release-scl
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian10">
  <p>
    Using Puppet 6.x is recommended, which is available from the Puppet Labs repository.

    To use Puppet 6.x with Puppet Agent and Puppet Server:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.puppet.com/puppet6-release-buster.deb
sudo dpkg -i /tmp/puppet6-release-buster.deb
{% endhighlight %}

  <p>Enable the Foreman repo:</p>

{% highlight bash %}
echo "deb http://deb.theforeman.org/ buster {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
sudo apt-get -y install ca-certificates gpg
wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_ubuntu1804">
  <p>
    Using Puppet 6.x is recommended, which is available from the Puppet Labs repository.

    To use Puppet 6.x with Puppet Agent and Puppet Server:
  </p>

{% highlight bash %}
sudo apt-get -y install ca-certificates
cd /tmp && wget https://apt.puppet.com/puppet6-release-bionic.deb
sudo dpkg -i /tmp/puppet6-release-bionic.deb
{% endhighlight %}

  <p>Enable the Foreman repo:</p>

{% highlight bash %}
echo "deb http://deb.theforeman.org/ bionic {{page.version}}" | sudo tee /etc/apt/sources.list.d/foreman.list
echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /etc/apt/sources.list.d/foreman.list
sudo apt-get -y install ca-certificates
wget -q https://deb.theforeman.org/pubkey.gpg -O- | sudo apt-key add -
{% endhighlight %}
</div>

#### Downloading the installer

<div class="quickstart_os quickstart_os_none">
  <i>No operating system selected.</i>
</div>

<div class="quickstart_os quickstart_os_rhel7 quickstart_os_el7">
{% highlight bash %}
sudo yum -y install foreman-installer
{% endhighlight %}
</div>

<div class="quickstart_os quickstart_os_debian10 quickstart_os_ubuntu1804 quickstart_os_ubuntu1604">
{% highlight bash %}
sudo apt-get update && sudo apt-get -y install foreman-installer
{% endhighlight %}
</div>

#### Running the installer

<div class="quickstart_os quickstart_os_debian10 quickstart_os_ubuntu1804 quickstart_os_ubuntu1604 alert alert-info">
  Ensure that <code>ping $(hostname -f)</code> shows the real IP address, not 127.0.1.1.  Change or remove this entry from /etc/hosts if present.
</div>

The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:

<div class="quickstart_os quickstart_os_none quickstart_os_el7 quickstart_os_rhel7 quickstart_os_debian10 quickstart_os_ubuntu1804">
{% highlight bash %}
sudo foreman-installer
{% endhighlight %}
</div>

After it completes, the installer will print some details about where to find Foreman and the Smart Proxy and Puppet master if they were installed along Foreman. Output should be similar to this:

{% highlight bash %}
  * Foreman is running at https://theforeman.example.com
      Initial credentials are admin / 3ekw5xtyXCoXxS29
  * Foreman Proxy is running at https://theforeman.example.com:8443
  * Puppetmaster is running at port 8140
  The full log is at /var/log/foreman-installer/foreman-installer.log
{% endhighlight %}

#### Next-generation documentation

Over the last year, Foreman community members have been open-sourcing Red Hat documentation to make more comprehensive guides available to Foreman users. At the moment, the following guides have been migrated to a work-in-progress [Foreman and Katello documentation site](https://docs.theforeman.org/web/). This project is not yet complete, but you might find useful information in some of the following guides:

* [Provisioning Guide](https://docs.theforeman.org/guides/build/doc-Provisioning_Guide/index-foreman.html)
* [Administering Foreman Guide](https://docs.theforeman.org/guides/build/doc-Administering_Red_Hat_Satellite/index-foreman.html)
* [Managing Hosts Guide](https://docs.theforeman.org/guides/build/doc-Managing_Hosts/index-foreman.html)
* [Content Management Guide](https://docs.theforeman.org/guides/build/doc-Content_Management_Guide/index-foreman.html)
* [Configuring Smart Proxies with a Load Balancer](https://docs.theforeman.org/guides/build/doc-Configuring_Load_Balancer/index-foreman.html)
